# Silixel

./: .gitignore  Makefile  notes.md  synth.sh
designs/: PanoCoreDut.v  memory.v  silice_blaze_2x.v  silice_blaze_4x.v  silice_blaze_6x.v  silice_blaze_8x.v  simple.v  tb_memory.v  waves.gtkw
src/: CMakeLists.txt  analyze.cc  dummy.cu  dummy.h  optimize.cc  optimize.h  profile.cc  profile.h  read.cc  read.h  silixel.cc  silixel_cpu.cc  silixel_cuda.cc  silixel_cuda.nvvp  simul_cuda.cu  simul_cuda.h  simul_gpu.cc  utility.cc  utility.h
synth/: synth.yosys
